--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 loom.platform=forge
 org.gradle.jvmargs=-Xmx2g
-baseGroup = com.github.nitalerie.sfxgrabber
+baseGroup = lol.godfights.sfxgrabber
 mcVersion = 1.8.9
 modid = sfxgrabber
 version = 1.0.0
